--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*! base start */
 * {
     margin: 0;
     padding: 0;
@@ -26,3 +27,220 @@ h6,
 p {
     margin: 0;
 }
+
+.container {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.logo {
+    font-size: 24px;
+    font-weight: 500;
+    display: flex;
+}
+
+/*! base end */
+
+
+/*! header start */
+#header {
+    border-bottom: 1px solid #dee0ea;
+    position: relative;
+}
+
+#global-notification {
+    background-color: #1367ef;
+    padding: 10px 0;
+    text-align: center;
+    font-size: 12px;
+    color: #fff;
+    line-height: 1.5;
+}
+
+#global-notification a {
+    color: #fff;
+    font-weight: 600;
+}
+
+#header-row {
+    height: 90px;
+    display: flex;
+    align-items: center;
+}
+
+#header-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#header-center #navigation #menu-list {
+    display: flex;
+    column-gap: 30px;
+    align-items: center;
+}
+
+#header-center #navigation #menu-list .menu-list-item {
+    display: flex;
+    position: relative;
+    height: 90px;
+    align-items: center;
+}
+
+#header-center #navigation .menu-link {
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    position: relative;
+    padding-bottom: 2px;
+}
+
+#header-center #navigation .menu-link::after {
+    content: "";
+    width: 0;
+    height: 1px;
+    background-color: #1367ef;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: .2s ease-in-out width;
+}
+
+#header-center #navigation .menu-list-item:hover .menu-link::after,
+#header-center #navigation .menu-list-item .menu-link.active::after {
+    width: 100%;
+}
+
+#header-center #navigation .menu-link i {
+    font-size: 12px;
+}
+
+#header-right #header-right-links {
+    display: flex;
+    align-items: center;
+    column-gap: 16px;
+}
+
+#header-right .bi-person {
+    font-size: 23px;
+}
+
+#header-right i {
+    font-size: 20px;
+}
+
+#header-bag {
+    position: relative;
+}
+
+#header-bag span {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    font-size: 12px;
+    width: 14px;
+    height: 14px;
+    border-radius: 14px;
+    background-color: #1367ef;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*? menu dropdown wrapper start*/
+#header .menu-dropdown-wrapper {
+    position: absolute;
+    top: 100%;
+    left: -30px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s ease opacity;
+}
+
+#header .menu-dropdown-content {
+    width: 220px;
+    background-color: #fff;
+    border: 1px solid #dee0ea;
+    display: flex;
+    flex-direction: column;
+    padding: 18px 0;
+}
+
+#header .menu-dropdown-content a {
+    display: flex;
+    padding: 4px 30px;
+    font-size: 14px;
+    transition: .2s ease-in color;
+}
+
+#header .menu-dropdown-content a:hover {
+    color: #1367ef;
+}
+
+#header-center #menu-list .menu-list-item:hover .menu-dropdown-wrapper {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* megamenu wrapper start */
+.megamenu-wrapper {
+    position: static !important;
+}
+
+.megamenu-wrapper .megamenu-links {
+    display: flex;
+    column-gap: 50px;
+}
+
+.megamenu-links .megamenu-product-title {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.megamenu-wrapper .megamenu-menu-list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2px;
+}
+
+.megamenu-wrapper .megamenu-menu-list a {
+    font-size: 14px;
+}
+
+.megamenu-wrapper .menu-dropdown-wrapper {
+    left: 0 !important;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.menu-dropdown-megamenu {
+    background-color: #fff;
+    border: 1px solid #dee0ea;
+    padding: 22px;
+    display: flex;
+    column-gap: 50px;
+}
+
+.megamenu-wrapper .megamenu-single-title {
+    font-size: 18px;
+    font-weight: 500;
+    margin: 5px 0;
+}
+
+.megamenu-wrapper .megamenu-single-subtitle {
+    font-size: 14px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    margin: 0 0 10px 0;
+}
+
+/* megamenu wrapper end */
+
+/*? menu dropdown wrapper end */
+/*! header end */
