--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ p {
 }
 
 button {
-    margin-top: 20px;
     cursor: pointer;
     border: none;
 }
@@ -100,6 +99,7 @@ input[type="number"]::-webkit-inner-spin-button {
 #header {
     border-bottom: 1px solid #dee0ea;
     position: relative;
+    height: 200vh;
 }
 
 #global-notification {
@@ -294,6 +294,154 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 /* megamenu wrapper end */
-
 /*? menu dropdown wrapper end */
 /*! header end */
+
+/*! modal search start */
+#modal-search {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+}
+
+#modal-search::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: .5;
+    position: fixed;
+}
+
+#modal-search .modal-wrapper {
+    position: relative;
+    max-width: 800px;
+    width: 100%;
+    background-color: #fff;
+    z-index: 10;
+    padding: 30px;
+}
+
+#modal-search .modal-title {
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+#modal-search .modal-desc {
+    font-size: 14px;
+    color: #7a7a7a;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #dee0ea;
+}
+
+#modal-search .search-form {
+    margin: 15px 0;
+    display: flex;
+    position: relative;
+}
+
+#modal-search .search-form::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: #dee0ea;
+    bottom: -15px;
+    position: absolute;
+}
+
+#modal-search .search-form input {
+    width: 100%;
+    max-height: 42px;
+    border-color: #dee0ea;
+}
+
+#modal-search .search-form button {
+    position: absolute;
+    right: 0;
+    height: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #dee0ea;
+}
+
+#modal-search .search-form button i {
+    font-size: 15px;
+    color: #7a7a7a;
+}
+
+#modal-search .search-results {
+    margin-top: 30px;
+}
+
+#modal-search .search-heading {
+    padding: 15px;
+    background-color: #f9f9f9;
+    border: 1px solid #dee0ea;
+}
+
+#modal-search .search-heading h3 {
+    font-size: 16px;
+    font-weight: 600;
+}
+
+#modal-search .results {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-left: 1px solid #dee0ea;
+}
+
+.results .result-item {
+    display: flex;
+    column-gap: 15px;
+    align-items: center;
+    padding: 15px;
+    border-bottom: 1px solid #dee0ea;
+    border-right: 1px solid #dee0ea;
+    transition: background-color .2s ease;
+}
+
+.results .result-item:hover {
+    background-color: #f9f9f9;
+}
+
+#modal-search .search-info {
+    display: flex;
+    flex-direction: column;
+}
+
+#modal-search .search-thumb {
+    max-width: 65px;
+    width: 100%;
+}
+
+#modal-search .search-sku {
+    color: #7a7a7a;
+    margin: 2px 0;
+}
+
+#modal-search .search-price {
+    font-weight: 600;
+    color: #dc3545;
+}
+
+#modal-search .bi-x-circle {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+/*! modal search end */
