--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -35,3 +35,12 @@
 }
 
 /*! products end */
+
+/*! campaign start */
+#campaigns .campaign-wrapper {
+    display: flex;
+    gap: 30px;
+    margin-top: 30px;
+}
+
+/*! campaign end */
