--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -44,3 +44,12 @@
 }
 
 /*! campaign end */
+
+/*! blogs start */
+#blogs .blog-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+}
+
+/*! blogs end */
