--- a/css/base.css
+++ b/css/base.css
@@ -71,25 +71,37 @@ button {
     border-color: #1367ef;
 }
 
+.btn-dark {
+    background-color: black;
+    color: white;
+    border-color: black;
+}
+
 .btn-primary:hover {
     background-color: #fff;
     color: #1367ef;
 }
 
+textarea {
+    overflow: auto;
+}
+
 input[type="text"],
 input[type="password"],
 input[type="email"],
-input[type="number"] {
+input[type="number"],
+textarea {
     outline: none;
-    border: 1px solid #dee0ea;
+    border: 1px solid #dee0ea !important;
     padding: 8px 8px 8px 15px;
 }
 
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus,
-input[type="number"]:focus {
-    border-color: gray;
+input[type="number"]:focus,
+textarea:focus {
+    border-color: gray !important;
 }
 
 input[type="number"]::-webkit-inner-spin-button {
