--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -220,6 +220,8 @@
         height: 100vh;
         background-color: #fff;
         border-right: 1px solid #dee0ea;
+        z-index: 2;
+        transition: .5s ease all;
     }
 
     #header-center .bi-x-circle {
@@ -229,6 +231,7 @@
         right: 15px;
         font-size: 20px;
         cursor: pointer;
+        transition: .5s ease all;
     }
 
     #header-center #menu-list {
