--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,12 @@
 @import url(components/campaign-item.css);
 @import url(components/blog-item.css);
 @import url(components/campaign-single.css);
+@import url(components/single-product/breadcrumb.css);
+@import url(components/single-product/product-gallery.css);
 
 /*! pages */
 @import url(pages/home.css);
 @import url(pages/contact.css);
 @import url(pages/account.css);
 @import url(pages/card.css);
+@import url(pages/product-details.css);
