--- a/css/components/slider.css
+++ b/css/components/slider.css
@@ -98,13 +98,23 @@
     background-color: #1367ef;
 }
 
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 @media (max-width:768px) {
     .slider-item {
         height: calc(100vh - 164.8px);
-    }
-
-    .slider-buttons button,
-    #slider .slider-dots {
-        display: none;
     }
 }
