--- a/css/components/campaign-single.css
+++ b/css/components/campaign-single.css
@@ -1,40 +1,40 @@
-#campaign-single {
+#campaign-single-wrapper {
     background-image: url(../../img/single-campaign.png);
     padding: 140px 15px;
     margin-bottom: 30px;
     background-attachment: fixed;
 }
 
-#campaign-single .campaign-wrapper {
+#campaign-single-wrapper .campaign-wrapper {
     color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#campaign-single .campaign-wrapper h2 {
+#campaign-single-wrapper .campaign-wrapper h2 {
     font-size: 25px;
 }
 
-#campaign-single .campaign-wrapper strong {
+#campaign-single-wrapper .campaign-wrapper strong {
     font-size: 55px;
     font-weight: 600;
     margin: 20px 0;
 }
 
-#campaign-single .campaign-wrapper span {
+#campaign-single-wrapper .campaign-wrapper span {
     display: inline-block;
     width: 50px;
     height: 5px;
     background-color: #fff;
 }
 
-#campaign-single .campaign-wrapper a {
+#campaign-single-wrapper .campaign-wrapper a {
     background-color: #fff;
     margin-top: 60px;
 }
 
-#campaign-single .campaign-wrapper a:hover {
+#campaign-single-wrapper .campaign-wrapper a:hover {
     background-color: #000;
     color: #fff;
     border-color: #000;
