--- a/css/main.css
+++ b/css/main.css
@@ -25,3 +25,4 @@
 @import url(pages/account.css);
 @import url(pages/card.css);
 @import url(pages/product-details.css);
+@import url(pages/single-blog.css);
