--- a/css/components/product-item.css
+++ b/css/components/product-item.css
@@ -125,22 +125,34 @@
     display: flex;
 }
 
-@media (max-width:768px) {
-    .product-list {
-        grid-template-columns: 1fr 1fr 1fr !important;
-        row-gap: 20px;
-    }
+.product-wrapper {
+    position: relative;
 }
 
-@media (max-width:480px) {
-    .product-list {
-        grid-template-columns: 1fr !important;
-        row-gap: 20px;
-        column-gap: 0;
+.product-wrapper .glide__arrows .glide__arrow {
+    position: absolute;
+    top: 50%;
+    background-color: transparent;
+}
+
+.product-wrapper .glide__arrows .glide__arrow--left {
+    left: -40px;
+}
+
+.product-wrapper .glide__arrows .glide__arrow--right {
+    right: -40px;
+}
+
+.product-wrapper .glide__arrows .glide__arrow i {
+    font-size: 40px;
+}
+
+@media(max-width:576px) {
+    .product-wrapper .glide__arrows .glide__arrow--left {
+        left: 0;
     }
 
-    .product-list-item {
-        max-width: 90%;
-        margin: 0 auto;
+    .product-wrapper .glide__arrows .glide__arrow--right {
+        right: 0;
     }
 }
