--- a/css/components/single-product/product-gallery.css
+++ b/css/components/single-product/product-gallery.css
@@ -7,11 +7,6 @@
     cursor: zoom-in;
 }
 
-#single-product .gallery-thumbs {
-    display: flex;
-    column-gap: 10px;
-}
-
 #single-product .gallery-thumbs li {
     display: flex;
 }
@@ -23,4 +18,31 @@
 #single-product .gallery-thumbs li img:hover,
 #single-product .gallery-thumbs li img.active {
     border-color: #000;
+}
+
+#single-product .product-thumb {
+    position: relative;
+}
+
+#single-product .glide__arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 30px;
+    background-color: transparent;
+    font-size: 25px;
+}
+
+#single-product .glide__arrow--left {
+    left: 0;
+}
+
+#single-product .glide__arrow--right {
+    right: 0;
+}
+
+@media (max-width:992px) {
+    #single-product .glide__arrow {
+        display: none;
+    }
 }
