--- a/css/base.css
+++ b/css/base.css
@@ -49,6 +49,11 @@ button {
     border: none;
 }
 
+button:disabled {
+    opacity: .4 !important;
+    cursor: no-drop;
+}
+
 .btn {
     display: inline-block;
     padding: 0 25px;
