--- a/css/components/modal-search.css
+++ b/css/components/modal-search.css
@@ -1,6 +1,6 @@
 /*! modal search start */
 #modal-search {
-    position: absolute;
+    position: absolute !important;
     top: 0;
     left: 0;
     width: 100%;
@@ -20,11 +20,10 @@
     width: 100%;
     height: 100%;
     background-color: black;
-    position: absolute;
+    position: fixed !important;
     top: 0;
     left: 0;
     opacity: .5;
-    position: fixed;
 }
 
 #modal-search .modal-wrapper {
@@ -155,11 +154,57 @@
 /*! search responsive */
 @media (max-width:992px) {
     #modal-search .modal-wrapper {
-        max-width: 370px;
-        margin: 0 10px;
+        max-width: 768px;
+        margin: 0 75px;
     }
 
     #modal-search .results {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width:768px) {
+    #modal-search .modal-desc {
+        border-bottom: none;
+        padding-bottom: 0px;
+    }
+
+    #modal-search .search-form {
+        margin: 15px 0;
+        display: flex;
+        position: relative;
+    }
+
+    #modal-search .search-results {
+        margin-top: 0px;
+    }
+
+    #modal-search .search-heading {
+        padding: 5px;
+        background-color: #f9f9f9;
+        border: 1px solid #dee0ea;
+        border-top: none;
+    }
+
+    #modal-search .search-heading h3 {
+        font-size: 16px;
+        font-weight: 600;
+    }
+
+    #modal-search .search-info h4,
+    #modal-search .search-info .search-sku,
+    #modal-search .search-info .search-price {
+        font-size: 14px;
+    }
+
+    #modal-search .results {
+        display: grid;
         grid-template-columns: 1fr;
+        border-left: 1px solid #dee0ea;
+    }
+
+    .results .result-item {
+        column-gap: 5px;
+        padding: 5px;
     }
 }
