--- a/css/components/reviews.css
+++ b/css/components/reviews.css
@@ -79,6 +79,10 @@
     transition: .2s ease-in color;
 }
 
+.tab-panel-reviews .comment-form-rating .star.active i {
+    color: gold;
+}
+
 .tab-panel-reviews .comment-form-rating .stars a:hover i {
     color: gold;
 }
